--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.BMICALCULATOR" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/navy</item>
-        <item name="colorPrimaryVariant">@color/navy</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="android:statusBarColor">@color/navy</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+<!-- Base application theme. -->
+<style name="Theme.BMICALCULATOR" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">@color/navy</item>
+    <item name="colorPrimaryDark">@color/navy</item>
+    <item name="colorPrimaryVariant">@color/navy</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <item name="android:statusBarColor">@color/navy</item>
+    <item name="color">@color/black</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorSecondaryVariant">@color/teal_700</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
 
-        <!-- Customize your theme here. -->
-    </style>
+    <!-- Customize your theme here. -->
+</style>
+
+
 </resources>
